--- a/Motorcycle Analysis/Motorcycle Analysis.Rmd
+++ b/Motorcycle Analysis/Motorcycle Analysis.Rmd
@@ -12,7 +12,7 @@ library(tidyverse)
 
 ## Read the Data
 ```{r}
-sales <- read_csv("C:/Users/User/Desktop/Motorcycle Sales Data/Motorcycle Analysis/sales data.csv")
+sales <- read_csv("~/DataScieneProjects-Collections/Motorcycle Analysis/sales data.csv")
 
 head(sales)
 ```
